# benser

./: Cargo.toml  README.md
benser/: Cargo.toml
benser-cli/: Cargo.toml
benser-cli/src/: lib.rs  main.rs  shader.wgsl
benser/src/: html.rs  lib.rs  style.rs
benser/src/css/: color.rs  mod.rs  parser.rs
benser/src/layout/: dimensions.rs  edge_sizes.rs  layout_box.rs  mod.rs  rect.rs
benser/src/painting/: canvas.rs  mod.rs
browser/: Cargo.toml
browser/src/: lib.rs  main.rs
html/: Cargo.toml
html/src/: dom.rs  encoding.rs  lib.rs  parse_state.rs  parser.rs  tokenizer.rs
paint/: Cargo.toml
paint/src/: canvas.rs  lib.rs
wgpu-renderer/: Cargo.toml
wgpu-renderer/examples/displays/: displays.css  displays.html
wgpu-renderer/src/: args.rs  browser.rs  file_output.rs  lib.rs  main.rs  wgpu_util.rs
wgpu-renderer/src/browser/: mod.rs  state.rs
wgpu-renderer/src/shaders/: shader.wgsl
